--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h1
     padding: 5px;
     height: 45%;
     font-family: 'Orbitron', sans-serif;
+    word-wrap: break-word;
 }
 
 .container
@@ -86,6 +87,7 @@ h1
     text-align: right;
     padding: 5px;
     font-family: 'Orbitron', sans-serif;
+    word-wrap: break-word;
 }
 
 footer
